--- a/src/content/blog/welcome.mdx
+++ b/src/content/blog/welcome.mdx
@@ -8,9 +8,9 @@ tags: ["dino-space-dive", "me"]
 # image: "/src/assets/space-bar-wide.png"
 ---
 
-![Space Bar](/src/assets/space-bar-wide.png)
+import ImgCenteredMd from "@components/ui/ImgCenteredMd.astro";
 
-<!-- ![Space Bar](/src/assets/space-bar-wide.png)<!--rehype:style=display:block;width:92%;height:630px;object-fit:cover;object-position:top center-->
+![Space Bar](images/space-bar-wide.jpg)
 
 Hello, my fellow space-dinos! Welcome to the amazing DinoSpaceDive! The coolest
 bar in cyber-space, designed for all the tech-dinos out there!
@@ -49,9 +49,9 @@ in the future? _(I don’t even know yet!)_
 I was born in the Canary Islands in Spain, and I love living here!
 
 Since I was young, I have really enjoyed playing sports. I played
-football/soccer, tennis and athletics for a while. I still play futsal (indoor
-football) in a team now. Every year, I try to go snowboarding or skiing as it is
-so fun that I got addicted to it.
+football/soccer, tennis and athletics for a while. I still play futsal _(indoor
+football)_ in a team now. Every year, I try to go snowboarding or skiing as it
+is so fun that I got addicted to it.
 
 I also like to travel a lot with my family and friends. What excites me most
 about travelling is discovering and finding unknown places in nature, such as
@@ -91,6 +91,8 @@ want to know more about my career path, just take a look at the timeline on the
 [homepage](/).
 
 ---
+
+<ImgCenteredMd src="/images/thatsall.gif" alt="Thas's all Folks!" />
 
 That’s all folks! Now, you know what to expect from this blog and know me a bit.
 
