astro-aleraptor arrgh!

--- a/src/content/blog/welcome.mdx
+++ b/src/content/blog/welcome.mdx
@@ -32,8 +32,8 @@ share my knowledge and experiences in a unique way.
 
 Here is a list of the things I’ll be writing about in this blog:
 
-- AppSec: Things like Secure Coduing, Web Application Security, DevSecOps, and
-  so on. _(future AppSec Engineer in progress)_
+- AppSec: Things like Secure Coding, Web Application Security, DevSecOps, and so
+  on. _(future AppSec Engineer in progress)_
 - Other Cyber-security topics: Hacking, Triage, Bug Bounty and CTFs.
 - Programming and Automation: Python, Bash, Web Development and Chrome
   Extensions.
@@ -58,7 +58,7 @@ football)_ in a team now. Every year, I try to go snowboarding or skiing as it
 is so fun that I got addicted to it.
 
 I also like to travel a lot with my family and friends. What excites me most
-about travelling is discovering and finding unknown places in nature, such as
+about traveling is discovering and finding unknown places in nature, such as
 mountains, beaches, waterfalls, rivers, lakes and valleys.
 
 I’m a bit of a geek and I used to love playing video games on any console, such
@@ -100,7 +100,7 @@ want to know more about my career path, just take a look at the timeline on the
 
 That’s all folks! Now, you know what to expect from this blog and know me a bit.
 
-Oops! I almost forgot to tell you.. So you know, I am a cool and fast
-Velociraptor.
+Oops! I almost forgot to tell you.. Just so you know, I'm a cool, fast
+Velociraptor sub-species called: Astro-AleRaptor!
 
 Please come in and let me know below what kind of dino are you! 🦖
